force-app/main/default/objects/QTB_Exception_Log__c/QTB_Exception_Log__c.object-meta.xml
<CustomObject>
    <description>Object created to capture errors and exceptions faced while running Apex code</description>
    <label>QTB Exception Log</label>
    <nameField>
        <label>QTB Exception Log Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>QTB Exception Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>