force-app/main/default/objects/QTB_Exception_Log__c/fields/QTB_Error_Message__c.field-meta.xml
<CustomField>
    <fullName>QTB_Error_Message__c</fullName>
    <label>Error Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>