force-app/main/default/objects/QTB_Exception_Log__c/fields/QTB_Exception_Type__c.field-meta.xml
<CustomField>
    <fullName>QTB_Exception_Type__c</fullName>
    <label>Exception Type</label>
    <type>TextArea</type>
</CustomField>