force-app/main/default/objects/QTB_Exception_Log__c/fields/QTB_Line_Number__c.field-meta.xml
<CustomField>
    <fullName>QTB_Line_Number__c</fullName>
    <description>Stores the Line number of the error logged</description>
    <label>Line Number</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>