force-app/main/default/objects/QTB_Exception_Log__c/fields/QTB_Stack_Trace__c.field-meta.xml
<CustomField>
    <fullName>QTB_Stack_Trace__c</fullName>
    <description>Stack Trace of the error logged</description>
    <label>Stack Trace</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>